Bug 670194 - Startup numbers don't account for interactive startup interruptions. r=dtownsend